feat: implement Groups and Info components, update News section, and adjust layout styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-  --color-primary: #000000;
+  --color-primary: #a92c2c;
 
   --color-sidebar-ring: var(--sidebar-ring);
 
